# breakout

./: .gitignore  .template.kra-autosave.kra  CMakeLists.txt  LICENSE  Readme.md  audiomanager.cpp  audiomanager.h  buffermanager.cpp  buffermanager.h  common.h  dynamicresource.h  font.cpp  font.h  game.cpp  game.h  imagerendertarget.cpp  imagerendertarget.h  level.cpp  level.h  main.cpp  particles.slang  particlesystem.cpp  particlesystem.h  pipeline.h  pipelinebuilder.cpp  pipelinebuilder.h  postprocess.cpp  postprocess.h  postprocess.slang  rendertarget.cpp  rendertarget.h  solid.kra  spritemanager.cpp  spritemanager.h  sprites.slang  stb.cpp  swapchain.cpp  swapchain.h  swapchainmanager.cpp  swapchainmanager.h  (+11 more)
levels/: 1.txt  2.txt  3.txt  4.txt
resource/: frame_left.ora  frame_right.ora  frame_top.ora  template.kra
